--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "2.0.17",
+    "@chakra-ui/react": "2.5.1",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "firebase": "9.17.1",
+    "firebase-admin": "11.5.0",
+    "firebase-functions": "4.2.1",
+    "framer-motion": "10.0.0",
+    "moment": "2.29.4",
+    "next": "13.2.1",
+    "nookies": "2.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "5.1.1",
+    "react-icons": "4.7.1",
+    "recoil": "0.7.6",
+    "safe-json-stringify": "1.2.0"
+  },
+  "devDependencies": {
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "typescript": "4.9.5"
   }
 }
